@@ -9,14 +9,14 @@
 package org.elasticsearch.ingest.common;
 
 import org.elasticsearch.grok.MatcherWatchdog;
+import org.elasticsearch.grok.PatternBank;
 import org.elasticsearch.ingest.IngestDocument;
 import org.elasticsearch.ingest.RandomDocumentPicks;
 import org.elasticsearch.ingest.TestIngestDocument;
 import org.elasticsearch.test.ESTestCase;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.elasticsearch.ingest.IngestDocumentMatcher.assertIngestDocument;
@@ -31,8 +31,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            new PatternBank(Map.of("ONE", "1")),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             false,
@@ -49,8 +49,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.emptyMap(),
-            Collections.singletonList("(?<a>(?i)A)"),
+            PatternBank.EMPTY,
+            List.of("(?<a>(?i)A)"),
             fieldName,
             false,
             false,
@@ -67,8 +67,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            new PatternBank(Map.of("ONE", "1")),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             false,
@@ -87,8 +87,8 @@ public class GrokProcessorTests extends ESTestCase {
             () -> new GrokProcessor(
                 randomAlphaOfLength(10),
                 null,
-                Collections.singletonMap("ONE", "1"),
-                Collections.singletonList("%{NOTONE:not_one}"),
+                new PatternBank(Map.of("ONE", "1")),
+                List.of("%{NOTONE:not_one}"),
                 fieldName,
                 false,
                 false,
@@ -106,8 +106,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.emptyMap(),
-            Collections.singletonList(fieldName),
+            PatternBank.EMPTY,
+            List.of(fieldName),
             fieldName,
             false,
             false,
@@ -124,8 +124,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            new PatternBank(Map.of("ONE", "1")),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             false,
@@ -143,8 +143,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            new PatternBank(Map.of("ONE", "1")),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             true,
@@ -161,8 +161,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            new PatternBank(Map.of("ONE", "1")),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             false,
@@ -179,8 +179,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            new PatternBank(Map.of("ONE", "1")),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             true,
@@ -196,8 +196,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            new PatternBank(Map.of("ONE", "1")),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             false,
@@ -214,8 +214,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            new PatternBank(Map.of("ONE", "1")),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             true,
@@ -236,8 +236,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            patternBank,
-            Arrays.asList("%{ONE:one}", "%{TWO:two}", "%{THREE:three}"),
+            new PatternBank(patternBank),
+            List.of("%{ONE:one}", "%{TWO:two}", "%{THREE:three}"),
             fieldName,
             false,
             false,
@@ -260,8 +260,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            patternBank,
-            Arrays.asList("%{ONE:one}", "%{TWO:two}", "%{THREE:three}"),
+            new PatternBank(patternBank),
+            List.of("%{ONE:one}", "%{TWO:two}", "%{THREE:three}"),
             fieldName,
             true,
             false,
@@ -283,8 +283,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            patternBank,
-            Arrays.asList("%{ONE:one}"),
+            new PatternBank(patternBank),
+            List.of("%{ONE:one}"),
             fieldName,
             true,
             false,
@@ -297,17 +297,17 @@ public class GrokProcessorTests extends ESTestCase {
 
     public void testCombinedPatterns() {
         String combined;
-        combined = GrokProcessor.combinePatterns(Arrays.asList(""), false);
+        combined = GrokProcessor.combinePatterns(List.of(""), false);
         assertThat(combined, equalTo(""));
-        combined = GrokProcessor.combinePatterns(Arrays.asList(""), true);
+        combined = GrokProcessor.combinePatterns(List.of(""), true);
         assertThat(combined, equalTo(""));
-        combined = GrokProcessor.combinePatterns(Arrays.asList("foo"), false);
+        combined = GrokProcessor.combinePatterns(List.of("foo"), false);
         assertThat(combined, equalTo("foo"));
-        combined = GrokProcessor.combinePatterns(Arrays.asList("foo"), true);
+        combined = GrokProcessor.combinePatterns(List.of("foo"), true);
         assertThat(combined, equalTo("foo"));
-        combined = GrokProcessor.combinePatterns(Arrays.asList("foo", "bar"), false);
+        combined = GrokProcessor.combinePatterns(List.of("foo", "bar"), false);
         assertThat(combined, equalTo("(?:foo)|(?:bar)"));
-        combined = GrokProcessor.combinePatterns(Arrays.asList("foo", "bar"), true);
+        combined = GrokProcessor.combinePatterns(List.of("foo", "bar"), true);
         assertThat(combined, equalTo("(?<_ingest._grok_match_index.0>foo)|(?<_ingest._grok_match_index.1>bar)"));
     }
 
@@ -322,8 +322,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            patternBank,
-            Arrays.asList("%{ONE:first}-%{TWO:second}", "%{ONE:first}-%{THREE:second}"),
+            new PatternBank(patternBank),
+            List.of("%{ONE:first}-%{TWO:second}", "%{ONE:first}-%{THREE:second}"),
             fieldName,
             randomBoolean(),
             randomBoolean(),
@@ -334,7 +334,7 @@ public class GrokProcessorTests extends ESTestCase {
         assertThat(doc.getFieldValue("second", String.class), equalTo("3"));
     }
 
-    public void testFirstWinNamedCapture() throws Exception {
+    public void testShouldCaptureAllSameNameGroupsAsList() throws Exception {
         String fieldName = RandomDocumentPicks.randomFieldName(random());
         IngestDocument doc = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>());
         doc.setFieldValue(fieldName, "12");
@@ -343,15 +343,15 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            patternBank,
-            Collections.singletonList("%{ONETWO:first}%{ONETWO:first}"),
+            new PatternBank(patternBank),
+            List.of("%{ONETWO:first}%{ONETWO:first}"),
             fieldName,
             randomBoolean(),
             randomBoolean(),
             MatcherWatchdog.noop()
         );
         processor.execute(doc);
-        assertThat(doc.getFieldValue("first", String.class), equalTo("1"));
+        assertEquals(doc.getFieldValue("first", List.class), List.of("1", "2"));
     }
 
     public void testUnmatchedNamesNotIncludedInDocument() throws Exception {
@@ -364,8 +364,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            patternBank,
-            Collections.singletonList("%{ONETWO:first}|%{THREE:second}"),
+            new PatternBank(patternBank),
+            List.of("%{ONETWO:first}|%{THREE:second}"),
             fieldName,
             randomBoolean(),
             randomBoolean(),
