@@ -43,10 +43,10 @@ import org.elasticsearch.health.HealthStatus;
 import org.elasticsearch.health.ImpactArea;
 import org.elasticsearch.health.SimpleHealthIndicatorDetails;
 import org.elasticsearch.health.node.HealthInfo;
+import org.elasticsearch.indices.SystemIndices;
 import org.elasticsearch.snapshots.SnapshotShardSizeInfo;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -60,6 +60,8 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.joining;
+import static java.util.stream.Collectors.toMap;
+import static java.util.stream.Collectors.toSet;
 import static org.elasticsearch.cluster.health.ClusterShardHealth.getInactivePrimaryHealth;
 import static org.elasticsearch.cluster.metadata.IndexMetadata.INDEX_ROUTING_INCLUDE_GROUP_PREFIX;
 import static org.elasticsearch.cluster.metadata.IndexMetadata.INDEX_ROUTING_INCLUDE_GROUP_SETTING;
@@ -68,6 +70,7 @@ import static org.elasticsearch.cluster.metadata.IndexMetadata.INDEX_ROUTING_REQ
 import static org.elasticsearch.cluster.routing.allocation.decider.EnableAllocationDecider.INDEX_ROUTING_ALLOCATION_ENABLE_SETTING;
 import static org.elasticsearch.cluster.routing.allocation.decider.ShardsLimitAllocationDecider.CLUSTER_TOTAL_SHARDS_PER_NODE_SETTING;
 import static org.elasticsearch.cluster.routing.allocation.decider.ShardsLimitAllocationDecider.INDEX_TOTAL_SHARDS_PER_NODE_SETTING;
+import static org.elasticsearch.health.Diagnosis.Resource.Type.FEATURE_STATE;
 import static org.elasticsearch.health.Diagnosis.Resource.Type.INDEX;
 import static org.elasticsearch.health.HealthStatus.GREEN;
 import static org.elasticsearch.health.HealthStatus.RED;
@@ -97,9 +100,16 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
     private final ClusterService clusterService;
     private final AllocationService allocationService;
 
-    public ShardsAvailabilityHealthIndicatorService(ClusterService clusterService, AllocationService allocationService) {
+    private final SystemIndices systemIndices;
+
+    public ShardsAvailabilityHealthIndicatorService(
+        ClusterService clusterService,
+        AllocationService allocationService,
+        SystemIndices systemIndices
+    ) {
         this.clusterService = clusterService;
         this.allocationService = allocationService;
+        this.systemIndices = systemIndices;
     }
 
     @Override
@@ -108,7 +118,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
     }
 
     @Override
-    public HealthIndicatorResult calculate(boolean explain, HealthInfo healthInfo) {
+    public HealthIndicatorResult calculate(boolean verbose, int maxAffectedResourcesCount, HealthInfo healthInfo) {
         var state = clusterService.state();
         var shutdown = state.getMetadata().custom(NodesShutdownMetadata.TYPE, NodesShutdownMetadata.EMPTY);
         var status = new ShardAllocationStatus(state.getMetadata());
@@ -116,18 +126,18 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         for (IndexRoutingTable indexShardRouting : state.routingTable()) {
             for (int i = 0; i < indexShardRouting.size(); i++) {
                 IndexShardRoutingTable shardRouting = indexShardRouting.shard(i);
-                status.addPrimary(shardRouting.primaryShard(), state, shutdown, explain);
+                status.addPrimary(shardRouting.primaryShard(), state, shutdown, verbose);
                 for (ShardRouting replicaShard : shardRouting.replicaShards()) {
-                    status.addReplica(replicaShard, state, shutdown, explain);
+                    status.addReplica(replicaShard, state, shutdown, verbose);
                 }
             }
         }
         return createIndicator(
             status.getStatus(),
-            status.getSummary(),
-            status.getDetails(explain),
+            status.getSymptom(),
+            status.getDetails(verbose),
             status.getImpacts(),
-            status.getDiagnosis(explain)
+            status.getDiagnosis(verbose, maxAffectedResourcesCount)
         );
     }
 
@@ -135,7 +145,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
     public static final String PRIMARY_UNASSIGNED_IMPACT_ID = "primary_unassigned";
     public static final String REPLICA_UNASSIGNED_IMPACT_ID = "replica_unassigned";
 
-    public static final String RESTORE_FROM_SNAPSHOT_ACTION_GUIDE = "http://ela.st/restore-snapshot";
+    public static final String RESTORE_FROM_SNAPSHOT_ACTION_GUIDE = "https://ela.st/restore-snapshot";
     public static final Diagnosis.Definition ACTION_RESTORE_FROM_SNAPSHOT = new Diagnosis.Definition(
         NAME,
         "restore_from_snapshot",
@@ -145,7 +155,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         RESTORE_FROM_SNAPSHOT_ACTION_GUIDE
     );
 
-    public static final String DIAGNOSE_SHARDS_ACTION_GUIDE = "http://ela.st/diagnose-shards";
+    public static final String DIAGNOSE_SHARDS_ACTION_GUIDE = "https://ela.st/diagnose-shards";
     public static final Diagnosis.Definition ACTION_CHECK_ALLOCATION_EXPLAIN_API = new Diagnosis.Definition(
         NAME,
         "explain_allocations",
@@ -156,7 +166,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         DIAGNOSE_SHARDS_ACTION_GUIDE
     );
 
-    public static final String FIX_DELAYED_SHARDS_GUIDE = "http://ela.st/fix-delayed-shard-allocation";
+    public static final String FIX_DELAYED_SHARDS_GUIDE = "https://ela.st/fix-delayed-shard-allocation";
     public static final Diagnosis.Definition DIAGNOSIS_WAIT_FOR_OR_FIX_DELAYED_SHARDS = new Diagnosis.Definition(
         NAME,
         "delayed_shard_allocations",
@@ -167,7 +177,19 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         FIX_DELAYED_SHARDS_GUIDE
     );
 
-    public static final String ENABLE_INDEX_ALLOCATION_GUIDE = "http://ela.st/fix-index-allocation";
+    public static final String WAIT_FOR_INITIALIZATION_GUIDE = "https://ela.st/wait-for-shard-initialization";
+    public static final Diagnosis.Definition DIAGNOSIS_WAIT_FOR_INITIALIZATION = new Diagnosis.Definition(
+        NAME,
+        "initializing_shards",
+        "Elasticsearch is currently initializing the unavailable shards. Please wait for the initialization to finish.",
+        "The shards will become available as long as the initialization completes. No action is required by the user, you can"
+            + " monitor the progress of the initializing shards at "
+            + WAIT_FOR_INITIALIZATION_GUIDE
+            + ".",
+        WAIT_FOR_INITIALIZATION_GUIDE
+    );
+
+    public static final String ENABLE_INDEX_ALLOCATION_GUIDE = "https://ela.st/fix-index-allocation";
     public static final Diagnosis.Definition ACTION_ENABLE_INDEX_ROUTING_ALLOCATION = new Diagnosis.Definition(
         NAME,
         "enable_index_allocations",
@@ -180,7 +202,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             + "].",
         ENABLE_INDEX_ALLOCATION_GUIDE
     );
-    public static final String ENABLE_CLUSTER_ALLOCATION_ACTION_GUIDE = "http://ela.st/fix-cluster-allocation";
+    public static final String ENABLE_CLUSTER_ALLOCATION_ACTION_GUIDE = "https://ela.st/fix-cluster-allocation";
     public static final Diagnosis.Definition ACTION_ENABLE_CLUSTER_ROUTING_ALLOCATION = new Diagnosis.Definition(
         NAME,
         "enable_cluster_allocations",
@@ -194,7 +216,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         ENABLE_CLUSTER_ALLOCATION_ACTION_GUIDE
     );
 
-    public static final String ENABLE_TIER_ACTION_GUIDE = "http://ela.st/enable-tier";
+    public static final String ENABLE_TIER_ACTION_GUIDE = "https://ela.st/enable-tier";
     public static final Map<String, Diagnosis.Definition> ACTION_ENABLE_TIERS_LOOKUP = DataTier.ALL_DATA_TIERS.stream()
         .collect(
             Collectors.toUnmodifiableMap(
@@ -210,7 +232,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             )
         );
 
-    public static final String INCREASE_SHARD_LIMIT_ACTION_GUIDE = "http://ela.st/index-total-shards";
+    public static final String INCREASE_SHARD_LIMIT_ACTION_GUIDE = "https://ela.st/index-total-shards";
     public static final Diagnosis.Definition ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING = new Diagnosis.Definition(
         NAME,
         "increase_shard_limit_index_setting",
@@ -241,7 +263,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             )
         );
 
-    public static final String INCREASE_CLUSTER_SHARD_LIMIT_ACTION_GUIDE = "http://ela.st/cluster-total-shards";
+    public static final String INCREASE_CLUSTER_SHARD_LIMIT_ACTION_GUIDE = "https://ela.st/cluster-total-shards";
     public static final Diagnosis.Definition ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING = new Diagnosis.Definition(
         NAME,
         "increase_shard_limit_cluster_setting",
@@ -272,7 +294,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             )
         );
 
-    public static final String MIGRATE_TO_TIERS_ACTION_GUIDE = "http://ela.st/migrate-to-tiers";
+    public static final String MIGRATE_TO_TIERS_ACTION_GUIDE = "https://ela.st/migrate-to-tiers";
     public static final Diagnosis.Definition ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA = new Diagnosis.Definition(
         NAME,
         "migrate_data_tiers_require_data",
@@ -341,7 +363,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             )
         );
 
-    public static final String TIER_CAPACITY_ACTION_GUIDE = "http://ela.st/tier-capacity";
+    public static final String TIER_CAPACITY_ACTION_GUIDE = "https://ela.st/tier-capacity";
     public static final Diagnosis.Definition ACTION_INCREASE_NODE_CAPACITY = new Diagnosis.Definition(
         NAME,
         "increase_node_capacity_for_allocations",
@@ -377,9 +399,9 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         private int started = 0;
         private int relocating = 0;
         private final Set<String> indicesWithUnavailableShards = new HashSet<>();
-        private final Map<Diagnosis.Definition, Set<String>> userActions = new HashMap<>();
+        private final Map<Diagnosis.Definition, Set<String>> diagnosisDefinitions = new HashMap<>();
 
-        public void increment(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean explain) {
+        public void increment(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean verbose) {
             boolean isNew = isUnassignedDueToNewInitialization(routing);
             boolean isRestarting = isUnassignedDueToTimelyRestart(routing, shutdowns);
             available &= routing.active() || isRestarting || isNew;
@@ -395,21 +417,26 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                         unassigned_restarting++;
                     } else {
                         unassigned++;
-                        if (explain) {
+                        if (verbose) {
                             diagnoseUnassignedShardRouting(routing, state).forEach(
-                                definition -> addUserAction(definition, routing.getIndexName())
+                                definition -> addDefinition(definition, routing.getIndexName())
                             );
                         }
                     }
                 }
-                case INITIALIZING -> initializing++;
+                case INITIALIZING -> {
+                    initializing++;
+                    if (verbose) {
+                        addDefinition(DIAGNOSIS_WAIT_FOR_INITIALIZATION, routing.getIndexName());
+                    }
+                }
                 case STARTED -> started++;
                 case RELOCATING -> relocating++;
             }
         }
 
-        private void addUserAction(Diagnosis.Definition actionDef, String indexName) {
-            userActions.computeIfAbsent(actionDef, (k) -> new HashSet<>()).add(indexName);
+        private void addDefinition(Diagnosis.Definition diagnosisDefinition, String indexName) {
+            diagnosisDefinitions.computeIfAbsent(diagnosisDefinition, (k) -> new HashSet<>()).add(indexName);
         }
     }
 
@@ -418,13 +445,13 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         if (info == null || info.getReason() != UnassignedInfo.Reason.NODE_RESTARTING) {
             return false;
         }
-        var shutdown = shutdowns.getAllNodeMetadataMap().get(info.getLastAllocatedNodeId());
-        if (shutdown == null || shutdown.getType() != SingleNodeShutdownMetadata.Type.RESTART) {
+        var shutdown = shutdowns.get(info.getLastAllocatedNodeId(), SingleNodeShutdownMetadata.Type.RESTART);
+        if (shutdown == null) {
             return false;
         }
         var now = System.nanoTime();
         var restartingAllocationDelayExpiration = info.getUnassignedTimeInNanos() + shutdown.getAllocationDelay().nanos();
-        return now <= restartingAllocationDelayExpiration;
+        return now - restartingAllocationDelayExpiration <= 0;
     }
 
     private static boolean isUnassignedDueToNewInitialization(ShardRouting routing) {
@@ -432,46 +459,38 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
     }
 
     /**
-     * Generate a list of actions for a user to take that should allow this shard to be assigned.
+     * Generate a list of diagnoses that'll contain the instructions for a user to take to allow this shard to be assigned.
      * @param shardRouting An unassigned shard routing
      * @param state State of the cluster
-     * @return A list of actions for the user to take for this shard
+     * @return A list of diagnoses for the provided unassigned shard
      */
     List<Diagnosis.Definition> diagnoseUnassignedShardRouting(ShardRouting shardRouting, ClusterState state) {
-        List<Diagnosis.Definition> actions = new ArrayList<>();
+        List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
         LOGGER.trace("Diagnosing unassigned shard [{}] due to reason [{}]", shardRouting.shardId(), shardRouting.unassignedInfo());
         switch (shardRouting.unassignedInfo().getLastAllocationStatus()) {
-            case NO_VALID_SHARD_COPY:
-                if (UnassignedInfo.Reason.NODE_LEFT == shardRouting.unassignedInfo().getReason()) {
-                    actions.add(ACTION_RESTORE_FROM_SNAPSHOT);
-                }
-                break;
-            case NO_ATTEMPT:
+            case NO_VALID_SHARD_COPY -> diagnosisDefs.add(ACTION_RESTORE_FROM_SNAPSHOT);
+            case NO_ATTEMPT -> {
                 if (shardRouting.unassignedInfo().isDelayed()) {
-                    actions.add(DIAGNOSIS_WAIT_FOR_OR_FIX_DELAYED_SHARDS);
+                    diagnosisDefs.add(DIAGNOSIS_WAIT_FOR_OR_FIX_DELAYED_SHARDS);
                 } else {
-                    actions.addAll(explainAllocationsAndDiagnoseDeciders(shardRouting, state));
+                    diagnosisDefs.addAll(explainAllocationsAndDiagnoseDeciders(shardRouting, state));
                 }
-                break;
-            case DECIDERS_NO:
-                actions.addAll(explainAllocationsAndDiagnoseDeciders(shardRouting, state));
-                break;
-            case DELAYED_ALLOCATION:
-                actions.add(DIAGNOSIS_WAIT_FOR_OR_FIX_DELAYED_SHARDS);
-                break;
+            }
+            case DECIDERS_NO -> diagnosisDefs.addAll(explainAllocationsAndDiagnoseDeciders(shardRouting, state));
+            case DELAYED_ALLOCATION -> diagnosisDefs.add(DIAGNOSIS_WAIT_FOR_OR_FIX_DELAYED_SHARDS);
         }
-        if (actions.isEmpty()) {
-            actions.add(ACTION_CHECK_ALLOCATION_EXPLAIN_API);
+        if (diagnosisDefs.isEmpty()) {
+            diagnosisDefs.add(ACTION_CHECK_ALLOCATION_EXPLAIN_API);
         }
-        return actions;
+        return diagnosisDefs;
     }
 
     /**
      * For a shard that is unassigned due to a DECIDERS_NO result, this will explain the allocation and attempt to generate
-     * user actions that should allow the shard to be assigned.
+     * a list of diagnoses that should allow the shard to be assigned.
      * @param shardRouting The shard routing that is unassigned with a last status of DECIDERS_NO
      * @param state Current cluster state
-     * @return a list of actions for the user to take
+     * @return A list of diagnoses for the provided unassigned shard
      */
     private List<Diagnosis.Definition> explainAllocationsAndDiagnoseDeciders(ShardRouting shardRouting, ClusterState state) {
         LOGGER.trace("Executing allocation explain on shard [{}]", shardRouting.shardId());
@@ -512,17 +531,17 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             List<NodeAllocationResult> nodeAllocationResults = allocateDecision.getNodeDecisions();
             return diagnoseAllocationResults(shardRouting, state, nodeAllocationResults);
         } else {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
     /**
-     * Generates a list of user actions to take for an unassigned shard by inspecting a list of NodeAllocationResults for
+     * Generates a list of diagnoses for an unassigned shard by inspecting a list of NodeAllocationResults for
      * well known problems.
      * @param shardRouting The unassigned shard.
      * @param state Current cluster state.
      * @param nodeAllocationResults A list of results for each node in the cluster from the allocation explain api
-     * @return A list of user actions to take.
+     * @return A list of diagnoses for the provided unassigned shard
      */
     List<Diagnosis.Definition> diagnoseAllocationResults(
         ShardRouting shardRouting,
@@ -530,15 +549,15 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         List<NodeAllocationResult> nodeAllocationResults
     ) {
         IndexMetadata index = state.metadata().index(shardRouting.index());
-        List<Diagnosis.Definition> actions = new ArrayList<>();
+        List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
         if (index != null) {
-            actions.addAll(checkIsAllocationDisabled(index, nodeAllocationResults));
-            actions.addAll(checkDataTierRelatedIssues(index, nodeAllocationResults, state));
+            diagnosisDefs.addAll(checkIsAllocationDisabled(index, nodeAllocationResults));
+            diagnosisDefs.addAll(checkDataTierRelatedIssues(index, nodeAllocationResults, state));
         }
-        if (actions.isEmpty()) {
-            actions.add(ACTION_CHECK_ALLOCATION_EXPLAIN_API);
+        if (diagnosisDefs.isEmpty()) {
+            diagnosisDefs.add(ACTION_CHECK_ALLOCATION_EXPLAIN_API);
         }
-        return actions;
+        return diagnosisDefs;
     }
 
     /**
@@ -548,20 +567,20 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
      * @return A predicate that returns true if the decision exists and matches the expected outcome, false otherwise.
      */
     private static Predicate<NodeAllocationResult> hasDeciderResult(String deciderName, Decision.Type outcome) {
-        return (nodeResult) -> nodeResult.getCanAllocateDecision()
-            .getDecisions()
-            .stream()
-            .anyMatch(decision -> deciderName.equals(decision.label()) && outcome == decision.type());
+        return (nodeResult) -> {
+            Decision decision = nodeResult.getCanAllocateDecision();
+            return decision != null && decision.getDecisions().stream().anyMatch(d -> deciderName.equals(d.label()) && outcome == d.type());
+        };
     }
 
     /**
-     * Generates a user action if a shard cannot be allocated anywhere because allocation is disabled for that shard
+     * Generates a list of diagnoses if a shard cannot be allocated anywhere because allocation is disabled for that shard
      * @param indexMetadata from the index shard being diagnosed
      * @param nodeAllocationResults allocation decision results for all nodes in the cluster.
-     * @return A list of user actions to take.
+     * @return A list of diagnoses for the provided unassigned shard
      */
     List<Diagnosis.Definition> checkIsAllocationDisabled(IndexMetadata indexMetadata, List<NodeAllocationResult> nodeAllocationResults) {
-        List<Diagnosis.Definition> actions = new ArrayList<>();
+        List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
         if (nodeAllocationResults.stream().allMatch(hasDeciderResult(EnableAllocationDecider.NAME, Decision.Type.NO))) {
             // Check the routing settings for index
             Settings indexSettings = indexMetadata.getSettings();
@@ -572,29 +591,29 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             );
             if (EnableAllocationDecider.Allocation.ALL != indexLevelAllocation) {
                 // Index setting is not ALL
-                actions.add(ACTION_ENABLE_INDEX_ROUTING_ALLOCATION);
+                diagnosisDefs.add(ACTION_ENABLE_INDEX_ROUTING_ALLOCATION);
             }
             if (EnableAllocationDecider.Allocation.ALL != clusterLevelAllocation) {
                 // Cluster setting is not ALL
-                actions.add(ACTION_ENABLE_CLUSTER_ROUTING_ALLOCATION);
+                diagnosisDefs.add(ACTION_ENABLE_CLUSTER_ROUTING_ALLOCATION);
             }
         }
-        return actions;
+        return diagnosisDefs;
     }
 
     /**
-     * Generates user actions for common problems that keep a shard from allocating to nodes in a data tier.
+     * Generates a list of diagnoses for common problems that keep a shard from allocating to nodes in a data tier.
      * @param indexMetadata Index metadata for the shard being diagnosed.
      * @param nodeAllocationResults allocation decision results for all nodes in the cluster.
      * @param clusterState the current cluster state.
-     * @return a list of user actions to take.
+     * @return A list of diagnoses for the provided unassigned shard
      */
     List<Diagnosis.Definition> checkDataTierRelatedIssues(
         IndexMetadata indexMetadata,
         List<NodeAllocationResult> nodeAllocationResults,
         ClusterState clusterState
     ) {
-        List<Diagnosis.Definition> actions = new ArrayList<>();
+        List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
         if (indexMetadata.getTierPreference().size() > 0) {
             List<NodeAllocationResult> dataTierAllocationResults = nodeAllocationResults.stream()
                 .filter(hasDeciderResult(DATA_TIER_ALLOCATION_DECIDER_NAME, Decision.Type.YES))
@@ -602,7 +621,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             if (dataTierAllocationResults.isEmpty()) {
                 // Shard must be allocated on specific tiers but no nodes were enabled for those tiers.
                 for (String tier : indexMetadata.getTierPreference()) {
-                    Optional.ofNullable(ACTION_ENABLE_TIERS_LOOKUP.get(tier)).ifPresent(actions::add);
+                    Optional.ofNullable(ACTION_ENABLE_TIERS_LOOKUP.get(tier)).ifPresent(diagnosisDefs::add);
                 }
             } else {
                 // Collect the nodes from the tiers this index is allowed on
@@ -625,14 +644,14 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                     .orElse(null);
 
                 // Run checks for data tier specific problems
-                actions.addAll(
+                diagnosisDefs.addAll(
                     checkDataTierAtShardLimit(indexMetadata, clusterState, dataTierAllocationResults, dataTierNodes, preferredTier)
                 );
-                actions.addAll(checkDataTierShouldMigrate(indexMetadata, dataTierAllocationResults, preferredTier, dataTierNodes));
-                checkNotEnoughNodesInDataTier(dataTierAllocationResults, preferredTier).ifPresent(actions::add);
+                diagnosisDefs.addAll(checkDataTierShouldMigrate(indexMetadata, dataTierAllocationResults, preferredTier, dataTierNodes));
+                checkNotEnoughNodesInDataTier(dataTierAllocationResults, preferredTier).ifPresent(diagnosisDefs::add);
             }
         }
-        return actions;
+        return diagnosisDefs;
     }
 
     private List<Diagnosis.Definition> checkDataTierAtShardLimit(
@@ -644,7 +663,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
     ) {
         // All tier nodes at shards limit?
         if (dataTierAllocationResults.stream().allMatch(hasDeciderResult(ShardsLimitAllocationDecider.NAME, Decision.Type.NO))) {
-            List<Diagnosis.Definition> actions = new ArrayList<>();
+            List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
             // We need the routing nodes for the tiers this index is allowed on to determine the offending shard limits
             List<RoutingNode> dataTierRoutingNodes = clusterState.getRoutingNodes()
                 .stream()
@@ -674,28 +693,29 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                 indexShardsPerNodeShouldChange = minShardCountInTier >= indexShardsPerNode;
             }
 
-            // Add appropriate user action
+            // Add appropriate diagnosis
             if (preferredTier != null) {
                 // We cannot allocate the shard to the most preferred tier because a shard limit is reached.
                 if (clusterShardsPerNodeShouldChange) {
-                    Optional.ofNullable(ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING_LOOKUP.get(preferredTier)).ifPresent(actions::add);
+                    Optional.ofNullable(ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING_LOOKUP.get(preferredTier))
+                        .ifPresent(diagnosisDefs::add);
                 }
                 if (indexShardsPerNodeShouldChange) {
-                    Optional.ofNullable(ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING_LOOKUP.get(preferredTier)).ifPresent(actions::add);
+                    Optional.ofNullable(ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING_LOOKUP.get(preferredTier)).ifPresent(diagnosisDefs::add);
                 }
             } else {
                 // We couldn't determine a desired tier. This is likely because there are no tiers in the cluster,
                 // only `data` nodes. Give a generic ask for increasing the shard limit.
                 if (clusterShardsPerNodeShouldChange) {
-                    actions.add(ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING);
+                    diagnosisDefs.add(ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING);
                 }
                 if (indexShardsPerNodeShouldChange) {
-                    actions.add(ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING);
+                    diagnosisDefs.add(ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING);
                 }
             }
-            return actions;
+            return diagnosisDefs;
         } else {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
@@ -707,7 +727,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
     ) {
         // Check if index has filter requirements on the old "data" attribute that might be keeping it from allocating.
         if (dataTierAllocationResults.stream().allMatch(hasDeciderResult(FilterAllocationDecider.NAME, Decision.Type.NO))) {
-            List<Diagnosis.Definition> actions = new ArrayList<>();
+            List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
             Map<String, List<String>> requireAttributes = INDEX_ROUTING_REQUIRE_GROUP_SETTING.getAsMap(indexMetadata.getSettings());
             List<String> requireDataAttributes = requireAttributes.get("data");
             DiscoveryNodeFilters requireFilter = requireDataAttributes == null
@@ -723,7 +743,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                 // Check if the data tier nodes this shard is allowed on have data attributes that match
                 if (requireFilter != null && dataTierNodes.stream().noneMatch(requireFilter::match)) {
                     // No data tier nodes match the required data attribute
-                    actions.add(
+                    diagnosisDefs.add(
                         Optional.ofNullable(preferredTier)
                             .map(ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA_LOOKUP::get)
                             .orElse(ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA)
@@ -731,16 +751,16 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                 }
                 if (includeFilter != null && dataTierNodes.stream().noneMatch(includeFilter::match)) {
                     // No data tier nodes match the included data attributes
-                    actions.add(
+                    diagnosisDefs.add(
                         Optional.ofNullable(preferredTier)
                             .map(ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA_LOOKUP::get)
                             .orElse(ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA)
                     );
                 }
             }
-            return actions;
+            return diagnosisDefs;
         } else {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
@@ -762,7 +782,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         }
     }
 
-    private class ShardAllocationStatus {
+    class ShardAllocationStatus {
         private final ShardAllocationCounts primaries = new ShardAllocationCounts();
         private final ShardAllocationCounts replicas = new ShardAllocationCounts();
         private final Metadata clusterMetadata;
@@ -771,12 +791,12 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             this.clusterMetadata = clusterMetadata;
         }
 
-        public void addPrimary(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean explain) {
-            primaries.increment(routing, state, shutdowns, explain);
+        public void addPrimary(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean verbose) {
+            primaries.increment(routing, state, shutdowns, verbose);
         }
 
-        public void addReplica(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean explain) {
-            replicas.increment(routing, state, shutdowns, explain);
+        public void addReplica(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean verbose) {
+            replicas.increment(routing, state, shutdowns, verbose);
         }
 
         public HealthStatus getStatus() {
@@ -789,20 +809,24 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             }
         }
 
-        public String getSummary() {
+        public String getSymptom() {
             var builder = new StringBuilder("This cluster has ");
             if (primaries.unassigned > 0
                 || primaries.unassigned_new > 0
                 || primaries.unassigned_restarting > 0
                 || replicas.unassigned > 0
-                || replicas.unassigned_restarting > 0) {
+                || replicas.unassigned_restarting > 0
+                || primaries.initializing > 0
+                || replicas.initializing > 0) {
                 builder.append(
                     Stream.of(
-                        createMessage(primaries.unassigned, "unavailable primary", "unavailable primaries"),
-                        createMessage(primaries.unassigned_new, "creating primary", "creating primaries"),
-                        createMessage(primaries.unassigned_restarting, "restarting primary", "restarting primaries"),
-                        createMessage(replicas.unassigned, "unavailable replica", "unavailable replicas"),
-                        createMessage(replicas.unassigned_restarting, "restarting replica", "restarting replicas")
+                        createMessage(primaries.unassigned, "unavailable primary shard", "unavailable primary shards"),
+                        createMessage(primaries.unassigned_new, "creating primary shard", "creating primary shards"),
+                        createMessage(primaries.unassigned_restarting, "restarting primary shard", "restarting primary shards"),
+                        createMessage(replicas.unassigned, "unavailable replica shard", "unavailable replica shards"),
+                        createMessage(primaries.initializing, "initializing primary shard", "initializing primary shards"),
+                        createMessage(replicas.initializing, "initializing replica shard", "initializing replica shards"),
+                        createMessage(replicas.unassigned_restarting, "restarting replica shard", "restarting replica shards")
                     ).flatMap(Function.identity()).collect(joining(", "))
                 ).append(".");
             } else {
@@ -819,8 +843,8 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             };
         }
 
-        public HealthIndicatorDetails getDetails(boolean explain) {
-            if (explain) {
+        public HealthIndicatorDetails getDetails(boolean verbose) {
+            if (verbose) {
                 return new SimpleHealthIndicatorDetails(
                     Map.of(
                         "unassigned_primaries",
@@ -892,44 +916,126 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
 
         /**
          * Returns the diagnosis for unassigned primary and replica shards.
-         * @param explain true if user actions should be generated, false if they should be omitted.
-         * @return A summary of user actions. Alternatively, an empty list if none were found or explain is false.
+         * @param verbose true if the diagnosis should be generated, false if they should be omitted.
+         * @param maxAffectedResourcesCount the max number of affected resources to be returned as part of the diagnosis
+         * @return The diagnoses list the indicator identified. Alternatively, an empty list if none were found or verbose is false.
          */
-        public List<Diagnosis> getDiagnosis(boolean explain) {
-            if (explain) {
-                Map<Diagnosis.Definition, Set<String>> actionsToAffectedIndices = new HashMap<>(primaries.userActions);
-                replicas.userActions.forEach((actionDefinition, indicesWithReplicasUnassigned) -> {
-                    Set<String> indicesWithPrimariesUnassigned = actionsToAffectedIndices.get(actionDefinition);
+        public List<Diagnosis> getDiagnosis(boolean verbose, int maxAffectedResourcesCount) {
+            if (verbose) {
+                Map<Diagnosis.Definition, Set<String>> diagnosisToAffectedIndices = new HashMap<>(primaries.diagnosisDefinitions);
+                replicas.diagnosisDefinitions.forEach((diagnosisDef, indicesWithReplicasUnassigned) -> {
+                    Set<String> indicesWithPrimariesUnassigned = diagnosisToAffectedIndices.get(diagnosisDef);
                     if (indicesWithPrimariesUnassigned == null) {
-                        actionsToAffectedIndices.put(actionDefinition, indicesWithReplicasUnassigned);
+                        diagnosisToAffectedIndices.put(diagnosisDef, indicesWithReplicasUnassigned);
                     } else {
                         indicesWithPrimariesUnassigned.addAll(indicesWithReplicasUnassigned);
                     }
                 });
-                if (actionsToAffectedIndices.isEmpty()) {
-                    return Collections.emptyList();
+                if (diagnosisToAffectedIndices.isEmpty()) {
+                    return List.of();
                 } else {
-                    return actionsToAffectedIndices.entrySet()
-                        .stream()
-                        .map(
-                            e -> new Diagnosis(
-                                e.getKey(),
-                                List.of(
-                                    new Diagnosis.Resource(
-                                        INDEX,
-                                        e.getValue()
-                                            .stream()
-                                            .sorted(indicesComparatorByPriorityAndName(clusterMetadata))
-                                            .collect(Collectors.toList())
-                                    )
+
+                    return diagnosisToAffectedIndices.entrySet().stream().map(e -> {
+                        List<Diagnosis.Resource> affectedResources = new ArrayList<>(1);
+                        if (e.getKey().equals(ACTION_RESTORE_FROM_SNAPSHOT)) {
+                            Set<String> restoreFromSnapshotIndices = e.getValue();
+                            if (restoreFromSnapshotIndices != null && restoreFromSnapshotIndices.isEmpty() == false) {
+                                affectedResources = getRestoreFromSnapshotAffectedResources(
+                                    clusterMetadata,
+                                    systemIndices,
+                                    restoreFromSnapshotIndices,
+                                    maxAffectedResourcesCount
+                                );
+                            }
+                        } else {
+                            affectedResources.add(
+                                new Diagnosis.Resource(
+                                    INDEX,
+                                    e.getValue()
+                                        .stream()
+                                        .sorted(indicesComparatorByPriorityAndName(clusterMetadata))
+                                        .limit(Math.min(e.getValue().size(), maxAffectedResourcesCount))
+                                        .collect(Collectors.toList())
                                 )
-                            )
-                        )
-                        .collect(Collectors.toList());
+                            );
+                        }
+                        return new Diagnosis(e.getKey(), affectedResources);
+                    }).collect(Collectors.toList());
                 }
             } else {
-                return Collections.emptyList();
+                return List.of();
             }
+        }
+
+        /**
+         * The restore from snapshot operation requires the user to specify indices and feature states.
+         * The indices that are part of the feature states must not be specified. This method loops through all the
+         * identified unassigned indices and returns the affected {@link Diagnosis.Resource}s of type `INDEX`
+         * and if applicable `FEATURE_STATE`
+         */
+        static List<Diagnosis.Resource> getRestoreFromSnapshotAffectedResources(
+            Metadata metadata,
+            SystemIndices systemIndices,
+            Set<String> restoreFromSnapshotIndices,
+            int maxAffectedResourcesCount
+        ) {
+            List<Diagnosis.Resource> affectedResources = new ArrayList<>(2);
+
+            Set<String> affectedIndices = new HashSet<>(restoreFromSnapshotIndices);
+            Set<String> affectedFeatureStates = new HashSet<>();
+            Map<String, Set<String>> featureToSystemIndices = systemIndices.getFeatures()
+                .stream()
+                .collect(
+                    toMap(
+                        SystemIndices.Feature::getName,
+                        feature -> feature.getIndexDescriptors()
+                            .stream()
+                            .flatMap(descriptor -> descriptor.getMatchingIndices(metadata).stream())
+                            .collect(toSet())
+                    )
+                );
+
+            for (Map.Entry<String, Set<String>> featureToIndices : featureToSystemIndices.entrySet()) {
+                for (String featureIndex : featureToIndices.getValue()) {
+                    if (restoreFromSnapshotIndices.contains(featureIndex)) {
+                        affectedFeatureStates.add(featureToIndices.getKey());
+                        affectedIndices.remove(featureIndex);
+                    }
+                }
+            }
+
+            Map<String, Set<String>> featureToDsBackingIndices = systemIndices.getFeatures()
+                .stream()
+                .collect(
+                    toMap(
+                        SystemIndices.Feature::getName,
+                        feature -> feature.getDataStreamDescriptors()
+                            .stream()
+                            .flatMap(descriptor -> descriptor.getBackingIndexNames(metadata).stream())
+                            .collect(toSet())
+                    )
+                );
+
+            // the shards_availability indicator works with indices so let's remove the feature states data streams backing indices from
+            // the list of affected indices (the feature state will cover the restore of these indices too)
+            for (Map.Entry<String, Set<String>> featureToBackingIndices : featureToDsBackingIndices.entrySet()) {
+                for (String featureIndex : featureToBackingIndices.getValue()) {
+                    if (restoreFromSnapshotIndices.contains(featureIndex)) {
+                        affectedFeatureStates.add(featureToBackingIndices.getKey());
+                        affectedIndices.remove(featureIndex);
+                    }
+                }
+            }
+
+            if (affectedIndices.isEmpty() == false) {
+                affectedResources.add(new Diagnosis.Resource(INDEX, affectedIndices.stream().limit(maxAffectedResourcesCount).toList()));
+            }
+            if (affectedFeatureStates.isEmpty() == false) {
+                affectedResources.add(
+                    new Diagnosis.Resource(FEATURE_STATE, affectedFeatureStates.stream().limit(maxAffectedResourcesCount).toList())
+                );
+            }
+            return affectedResources;
         }
     }
 }
