@@ -624,7 +624,7 @@ public final class RepositoryData {
             }
             snapshotIndices.put(indexId.getName(), indexId);
         }
-        return Collections.unmodifiableMap(snapshotIndices);
+        return Map.copyOf(snapshotIndices);
     }
 
     private static final String SHARD_GENERATIONS = "shard_generations";
@@ -875,7 +875,7 @@ public final class RepositoryData {
             for (Map.Entry<String, String> generationEntry : val.entrySet()) {
                 forSnapshot.put(indexLookup.get(generationEntry.getKey()), generationEntry.getValue());
             }
-            indexGenerations.put(snapshotIdMapEntry.getKey(), forSnapshot);
+            indexGenerations.put(snapshotIdMapEntry.getKey(), Map.copyOf(forSnapshot));
         }
         return new IndexMetaDataGenerations(indexGenerations, indexMetaIdentifiers);
     }
